updated script files

--- a/scripts/test_gpr.ipynb
+++ b/scripts/test_gpr.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3c95807",
+   "metadata": {},
+   "source": [
+    "## Loading Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0c6d8c75-048b-465c-809d-b0343b8e37a6",
@@ -21,22 +29,39 @@
     "import numpy as np\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
-    "import utils\n",
-    "from utils import StepWiseDecay\n",
+    "\n",
     "import pickle\n",
     "import random\n",
     "import time\n",
     "\n",
+    "# Importing Scikit-Learn Models\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor as GPR\n",
     "from sklearn.gaussian_process.kernels import ConstantKernel, DotProduct, ExpSineSquared, Matern, RBF\n",
     "from sklearn.decomposition import TruncatedSVD\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from torch import nn\n",
     "\n",
-    "from modAL.models import BayesianOptimizer, ActiveLearner\n",
-    "from modAL.acquisition import max_EI, max_PI, max_UCB, optimizer_EI,optimizer_PI, optimizer_UCB\n",
+    "# Importing Bayesian Optimizer and Acquisition Functions\n",
+    "from modAL.models import BayesianOptimizer\n",
+    "from modAL.acquisition import max_EI, max_PI, max_UCB\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler"
+    "# Importing Custom Acquisiton Functions and Decay Functions\n",
+    "import utils\n",
+    "from utils import StepWiseDecay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8206e7a6",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9e1ce1",
+   "metadata": {},
+   "source": [
+    "Parameterised Cell Block"
    ]
   },
   {
@@ -61,7 +86,7 @@
    "id": "cddef2ef",
    "metadata": {},
    "source": [
-    "## Helper Functions"
+    "## Loading Datasets"
    ]
   },
   {
@@ -98,11 +123,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6193ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f7e8f9b",
+   "metadata": {},
+   "source": [
+    "Identifying noisy assays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aef88d7f-4cce-492c-aa89-d8e39aa92473",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_nan.loc[df_nan['squared_pearson_trn'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d21f4018",
+   "metadata": {},
+   "source": [
+    "Removing Noisy Assays"
    ]
   },
   {
@@ -121,6 +172,14 @@
     "print('x-----x-----x-----x')\n",
     "df.loc[df['assay_id']==737235].head()\n",
     "print('x-----x-----x-----x')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50c7017f",
+   "metadata": {},
+   "source": [
+    "Loading Config Files"
    ]
   },
   {
@@ -225,6 +284,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b760587e",
+   "metadata": {},
+   "source": [
+    "Creating the dynamic Data Matrix to store the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3ce108e",
@@ -235,6 +302,14 @@
     "pearson_tst = [[0 for i in range(len(clf_list)+3)] for j in range(len(df[\"assay_id\"].unique()+1))]\n",
     "\n",
     "pearson_values_graph = [[0 for i in range(len(acquisition_list))] for j in range(num_iterations)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "084fddb3",
+   "metadata": {},
+   "source": [
+    "Suppresing warnings"
    ]
   },
   {
@@ -249,8 +324,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9db7feb",
+   "metadata": {},
+   "source": [
+    "## Training Cycle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f80d6e69",
    "metadata": {},
    "outputs": [],
@@ -262,12 +345,13 @@
     "pvg_column = 0\n",
     "pvg_row = 0\n",
     "\n",
+    "# Assay for which graphs have to be generated\n",
     "# flag_first_assay = 688239\n",
     "# flag_first_assay = 517\n",
     "flag_first_assay = 70695\n",
     "\n",
     "first_start = time.time()\n",
-    "# try:\n",
+    "\n",
     "decay_tracker = utils.StepWiseDecay(decay_list)\n",
     "count = 0\n",
     "\n",
@@ -416,6 +500,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a922305f",
+   "metadata": {},
+   "source": [
+    "Displaying the time taken for model creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4698892",
@@ -427,22 +519,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18c8509c",
+   "id": "246f1486",
    "metadata": {},
    "source": [
-    "# row+=1\n",
-    "for i in range(3,column):\n",
-    "    # value_trn = np.mean(np.array(pearson_trn)[:,i])\n",
-    "    # value_tst = np.mean(np.array(pearson_trn)[:,i])\n",
-    "    \n",
-    "    column_trn = np.array(pearson_trn)[:,i]\n",
-    "    column_trn = column_trn[:row]\n",
-    "\n",
-    "    column_tst = np.array(pearson_tst)[:,i]\n",
-    "    column_tst = column_tst[:row]\n",
-    "\n",
-    "    pearson_trn[row][i] = np.mean(column_trn)\n",
-    "    pearson_tst[row][i] = np.mean(column_tst)"
+    "Results of the selected assay"
    ]
   },
   {
@@ -491,6 +571,14 @@
     "               )\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "603531da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
