--- a/scripts/test_rfr.ipynb
+++ b/scripts/test_rfr.ipynb
@@ -29,10 +29,10 @@
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearnex.ensemble import RandomForestRegressor\n",
-    "from torch import nn\n",
+    "\n",
     "\n",
     "from modAL.models import BayesianOptimizer, CommitteeRegressor\n",
-    "from modAL.acquisition import max_EI, max_PI, max_UCB, optimizer_EI,optimizer_PI, optimizer_UCB\n",
+    "from modAL.acquisition import max_EI, max_PI, max_UCB\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler"
    ]
